--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <button>Click me</button>
 
-    <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
-    <div id="img_dialog" class="dialog d_none"></div>
+    <!-- <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
+    <div id="img_dialog" class="dialog d_none"></div> -->
   </body>
 </html>
