--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="pokemon_content"></div>
 
-    <button>Click me</button>
+    <button onclick="renderNextCards()">Click me</button>
 
     <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
     <div id="pokemon_dialog" class="dialog d_none"></div>
