add loading spinner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </header>
 
-    <div id="pokemon_content"></div>
+    <div id="pokemon_content"><span id="loader" class="loader d_none"></span></div>
 
     <button onclick="renderNextCards()">Click me</button>
 
