--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <button onclick="renderNextCards()">Click me</button>
 
+    <div id="loader_overlay" class="d_none"></div>
     <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
     <div id="pokemon_dialog" class="dialog d_none"></div>
   </body>
