--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>PokeDex 2</title>
     <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/cards.css">
 
     <script src="script.js"></script>
     <script src="./template.js"></script>
