--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body onload="init()">
     <header>
       <div>
-        <h1>PokeDex 2</h1>
+        <h1 class="textcolor">PokeDex 2</h1>
       </div>
 
       <div>
