--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./styles/cards.css">
+    <link rel="stylesheet" href="./styles/icons.css">
 
     <script src="script.js"></script>
     <script src="./template.js"></script>
