--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
     <button onclick="renderNextCards()">Load more</button>
 
+    <!-- <div class="icon grass">
+      <img src="./icons/grass.svg"/>
+    </div> -->
+
     <div id="loader_overlay" class="d_none"></div>
     <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
     <div id="pokemon_dialog" class="dialog d_none"></div>
