add new functions

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       </div>
     </header>
 
-    <div id="pokemon_content"><span id="loader" class="loader d_none"></span></div>
+    <div id="pokemon_content"></div>
+    <span id="loader" class="loader d_none"></span>
 
-    <button onclick="renderNextCards()">Load more</button>
+    <button id="loadButton" onclick="renderNextCards()">Load more</button>
 
     <!-- <div class="icon grass">
       <img src="./icons/grass.svg"/>
