--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeDex 2</title>
-    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/pikachu.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./styles/cards.css">
     <link rel="stylesheet" href="./styles/colors.css">
@@ -17,7 +17,7 @@
   <body onload="init()">
     <header>
       <div>
-        <h1 class="textcolor">PokeDex 2</h1>
+        <h1 class="textcolor">POKEDEX 2</h1>
       </div>
 
       <div>
