--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/icons.css">
 
     <script src="script.js"></script>
-    <script src="./template.js"></script>
+    <script src="./scripts/template.js"></script>
   </head>
 
   <body onload="init()">
