add new search functions

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div>
         <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
+        <div id="info_field"></div>
       </div>
     </header>
 
