change some functions and css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>PokeDex 2</title>
     <link rel="shortcut icon" href="./assets/pikachu.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./styles/cards.css">
-    <link rel="stylesheet" href="./styles/colors.css">
-    <link rel="stylesheet" href="./styles/icons.css">
+    <link rel="stylesheet" href="./styles/cards.css" />
+    <link rel="stylesheet" href="./styles/colors.css" />
+    <link rel="stylesheet" href="./styles/icons.css" />
 
     <script src="script.js"></script>
     <script src="./scripts/template.js"></script>
@@ -30,10 +30,6 @@
     <span id="loader" class="loader d_none"></span>
 
     <button id="loadButton" onclick="renderNextCards()">Load more</button>
-
-    <!-- <div class="icon grass">
-      <img src="./icons/grass.svg"/>
-    </div> -->
 
     <div id="loader_overlay" class="d_none"></div>
     <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
