--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <div id="loader_overlay" class="d_none"></div>
     <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
     <div id="pokemon_dialog" class="dialog d_none"></div>
+    <footer>Footer</footer>
   </body>
 </html>
