--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PokeDex 2</title>
+    <title>PokéDex</title>
     <link rel="shortcut icon" href="./assets/pikachu.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./styles/cards.css" />
@@ -17,9 +17,9 @@
   <body onload="init()">
     <header>
       <div>
-        <h1 class="textcolor">POKEDEX 2</h1>
       </div>
-
+      
+      <h1 class="textcolor">PokéDex</h1>
       <div>
         <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
         <div id="info_field"></div>
