--- a/index.html
+++ b/index.html
@@ -15,30 +15,25 @@
   </head>
 
   <body onload="init()">
-
     <div class="wrapper">
+      <header>
+        <div><img class="logo_img" src="./img/logo-header.png" alt="" /></div>
 
-    <header>
-      
-      <div><img class="logo_img" src="./img/logo-header.png" alt=""></div>
+        <div>
+          <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
+          <div id="info_field"></div>
+        </div>
+      </header>
 
-      <div>
-        <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
-        <div id="info_field"></div>
-      </div>
-    </header>
+      <div id="pokemon_content"></div>
+      <span id="loader" class="loader d_none"></span>
 
-    <div id="pokemon_content"></div>
-    <span id="loader" class="loader d_none"></span>
+      <button id="loadButton" onclick="renderNextCards()">Load more</button>
 
-    <button id="loadButton" onclick="renderNextCards()">Load more</button>
-
-    <div id="loader_overlay" class="d_none"></div>
-    <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
-    <div id="pokemon_dialog" class="dialog d_none"></div>
-    <footer>Footer</footer>
-
-  </div>
-
+      <div id="loader_overlay" class="d_none"></div>
+      <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
+      <div id="pokemon_dialog" class="dialog d_none"></div>
+      <footer>Footer</footer>
+    </div>
   </body>
 </html>
