--- a/index.html
+++ b/index.html
@@ -16,13 +16,24 @@
 
   <body onload="init()">
     <div class="wrapper">
-      <header>
-        <div><img class="logo_img" src="./img/logo-header.png" alt="" /></div>
+      <header id="header">
 
-        <div>
+        <div class="logo_input_container">
+        <div><img class="logo_img" src="./img/logo-header.png" alt="" /></div>
+        <div class="toggle_container">
+          <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()">
+        </div>
+        <div class="input_container">
           <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
           <div id="info_field"></div>
         </div>
+      </div>
+
+
+        <!-- <div class="toggle_container">
+          <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()">
+        </div> -->
+        
       </header>
 
       <div id="pokemon_content"></div>
@@ -31,8 +42,11 @@
       <button id="loadButton" onclick="renderNextCards()">Load more</button>
 
       <div id="loader_overlay" class="d_none"></div>
+
       <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
+
       <div id="pokemon_dialog" class="dialog d_none"></div>
+
       <footer>Footer</footer>
     </div>
   </body>
