--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
 
   <body onload="init()">
     <div class="wrapper">
+
       <header id="header">
 
         <div class="logo_input_container">
-        <div><img class="logo_img" src="./img/logo-header.png" alt="" /></div>
-        <div class="toggle_container">
-          <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()">
+
+          <div class="logo_container">
+            <img class="logo_img" src="./img/Pokemon_Logo1.png" alt="" />
+          </div>
+
+          <div class="toggle_container">
+            <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()">
+          </div>
+
+          <div class="input_container">
+            <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
+            <div id="info_field"></div>
         </div>
-        <div class="input_container">
-          <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
-          <div id="info_field"></div>
-        </div>
+
       </div>
-
-
-        <!-- <div class="toggle_container">
-          <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()">
-        </div> -->
         
       </header>
 
