--- a/index.html
+++ b/index.html
@@ -16,40 +16,34 @@
 
   <body onload="init()">
     <div class="wrapper">
-
       <header id="header">
-
         <div class="logo_input_container">
-
           <div class="logo_container">
             <img class="logo_img" src="./img/Pokemon_Logo1.png" alt="" />
           </div>
 
           <div class="toggle_container">
-            <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()">
+            <img id="toggle_icon" class="toggle_icon" src="./assets/icons8-ios-nicht-stören-50.png" onclick="toggleDarkMode()" />
           </div>
 
           <div class="input_container">
             <input id="search_field" onkeyup="searchPokemon()" placeholder="Search your Pokemon..." class="input" name="text" type="text" />
             <div id="info_field"></div>
+          </div>
         </div>
-
-      </div>
-        
       </header>
 
       <div id="pokemon_content"></div>
       <span id="loader" class="loader d_none"></span>
-
       <button id="loadButton" onclick="renderNextCards()">Load more</button>
-
-      <div id="loader_overlay" class="d_none"></div>
-
+      <div div id="loader_overlay" class="d_none"></div>
       <div onclick="closeDialog()" id="body_overlay" class="d_none"></div>
-
       <div id="pokemon_dialog" class="dialog d_none"></div>
 
-      <footer>Footer</footer>
+      <footer>
+        <p>&copy; MP Studios</p>
+        <i>Icons von <a target="_blank" href="https://icons8.com">Icons8</a></i>
+      </footer>
     </div>
   </body>
 </html>
