--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="./scripts/newscript.js"></script>
     <script src="./scripts/template.js"></script>
   </body>
 </html>
