--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   </head>
 
   <body onload="init()">
-
     <header id="header">
       <div class="logo_input_container">
         <div class="logo_container">
@@ -30,7 +29,6 @@
       </div>
     </header>
 
-
     <div class="wrapper">
       <div id="pokemon_content"></div>
       <span id="loader" class="loader d_none"></span>
@@ -40,15 +38,12 @@
       <div id="pokemon_dialog" class="dialog d_none"></div>
     </div>
 
-
     <footer>
       <p>&copy; MP Studios</p>
       <i>Icons von <a target="_blank" href="https://icons8.com">Icons8</a></i>
     </footer>
 
-
-    <!-- <script src="script.js"></script> -->
-    <script src="./scripts/newscript.js"></script>
+    <script src="script.js"></script>
     <script src="./scripts/template.js"></script>
   </body>
 </html>
