Add console messages for developer guidance and enhance scrollbar styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./styles/cards.css" />
     <link rel="stylesheet" href="./styles/colors.css" />
     <link rel="stylesheet" href="./styles/icons.css" />
+    <script>
+      console.log("%cHey Entwickler! 👋", "color: red; font-size: 20px; font-weight: bold;");
+      console.log("Diese Seite wurde mit ❤️ erstellt.");
+      console.log("Schau dich ruhig um im Code.");
+    </script>
   </head>
 
   <body onload="init()">
